--- a/src/main/webapp/i18n/cs/mobileUser.json
+++ b/src/main/webapp/i18n/cs/mobileUser.json
@@ -16,7 +16,7 @@
       "detail": {
         "title": "Mobile User"
       },
-      "rodneCislo": "Rodne Cislo",
+      "citizenId": "Citizen Id",
       "phoneNumber": "Phone Number",
       "idcardImage": "Idcard Image",
       "valid": "Valid",
