--- a/src/main/webapp/i18n/cs/global.json
+++ b/src/main/webapp/i18n/cs/global.json
@@ -9,6 +9,7 @@
         "main": "Entity",
         "mobileUser": "Mobile User",
         "eventLogging": "Event Logging",
+        "otpCodes": "Otp Codes",
         "jhipster-needle-menu-add-entry": "JHipster will add additional entities here (do not translate!)"
       },
       "account": {
